--- a/gleifparser/src/main/resources/application.properties
+++ b/gleifparser/src/main/resources/application.properties
@@ -6,15 +6,15 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 debug = true
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 #sap hana jdbc connection details
-#spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
-#spring.datasource.username=GBI_017
-#spring.datasource.password=@Shilpa080
-#spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
-
-
-spring.datasource.url=jdbc:sap://hxehost:39015/SYSTEM
-spring.datasource.username=SYSTEM
-spring.datasource.password=Inmemory2019
+spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
+spring.datasource.username=GBI_017
+spring.datasource.password=@Shilpa080
 spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
+
+
+#spring.datasource.url=jdbc:sap://hxehost:39015/SYSTEM
+#spring.datasource.username=SYSTEM
+#spring.datasource.password=Inmemory2019
+#spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
