--- a/gleifparser/src/main/resources/application.properties
+++ b/gleifparser/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
 spring.datasource.username=GBI_017
 spring.datasource.password=@Shilpa080
 spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
-
+spring.activemq.packages.trusted=com.inmemory.gleifparser.beans
 
 #spring.datasource.url=jdbc:sap://hxehost:39015/SYSTEM
 #spring.datasource.username=SYSTEM
