temporary console count

--- a/gleifparser/src/main/resources/application.properties
+++ b/gleifparser/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 debug = false
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 #sap hana jdbc connection details
 spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
 spring.datasource.username=GBI_017
