--- a/gleifparser/src/main/resources/application.properties
+++ b/gleifparser/src/main/resources/application.properties
@@ -5,12 +5,18 @@ spring.thymeleaf.suffix=.html
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
-debug = false
+debug = true
 spring.jpa.show-sql = false
 #sap hana jdbc connection details
-spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
-spring.datasource.username=GBI_017
-spring.datasource.password=@Shilpa080
+#spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
+#spring.datasource.username=GBI_017
+#spring.datasource.password=@Shilpa080
+
+spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_022
+spring.datasource.username=GBI_022
+spring.datasource.password=YamBasa3*
+
+
 spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
 spring.activemq.packages.trusted=com.inmemory.gleifparser.beans
 
