--- a/gleifparser/src/main/resources/application.properties
+++ b/gleifparser/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.suffix=.html
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
-debug = true
+debug = false
 spring.jpa.show-sql = false
 #sap hana jdbc connection details
 #spring.datasource.url=jdbc:sap://h02-d03.ucc.ovgu.de:30250/GBI_017
