--- a/gleifparser/build.gradle
+++ b/gleifparser/build.gradle
@@ -21,23 +21,32 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation group: 'com.sap.cloud.db.jdbc', name: 'ngdbc', version: '2.3.58'
+	implementation 'com.sap.cloud.db.jdbc:ngdbc:2.3.58'
 	implementation    'org.webjars:webjars-locator-core:0.37'
 	implementation 'org.springframework.boot:spring-boot-starter-activemq'
 	implementation 'org.apache.activemq:activemq-broker:5.15.8'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation  'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
 	
 	//web jars
-	runtimeClasspath  'org.webjars:jquery:3.4.0'
-	runtimeClasspath    'org.webjars:bootstrap:4.3.1'
-	
+	runtimeClasspath  'org.webjars:jquery:2.2.4'
+	runtimeClasspath    'org.webjars:bootstrap:3.3.5'
 	runtimeClasspath   'org.webjars:sockjs-client:1.1.2'
 	runtimeClasspath   'org.webjars:stomp-websocket:2.3.3-1'
 	runtimeClasspath 'org.webjars:jquery-ui:1.12.0'
 	runtimeClasspath 'org.springframework.boot:spring-boot-devtools'
 	runtimeClasspath  'org.webjars:datatables:1.10.19'
 	runtimeClasspath 'org.webjars:font-awesome:5.8.1'
+	runtimeClasspath 'org.webjars:Magnific-Popup:1.1.0'
+	runtimeClasspath 'org.webjars.bowergithub.joeldbirch:superfish:1.7.9'
+	runtimeClasspath 'org.webjars:animate.css:3.5.2'
+	runtimeClasspath 'org.webjars:modernizr:2.8.3-1'
+	runtimeClasspath  'org.webjars:jquery-waypoints:2.0.3'
+	runtimeClasspath 'org.webjars:stellar.js:0.6.2'
+	runtimeClasspath 'org.webjars.bower:jquery.easing:1.3.0'
+	runtimeClasspath 'org.webjars:Bootstrap-3-Typeahead:3.1.1'
+	
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
